--- a/www/arabic.html
+++ b/www/arabic.html
@@ -285,7 +285,7 @@ $(document).ready(function() {
 	<a href="#time">زمان و تاریخ</a><br/>
 	<a href="#days">روزهای هفته</a><br/>
 	<a href="#sesons">فصول چهارگانه</a><br/>
-	<a href="#relative">خیشاوندی</a><br/>
+	<a href="#relative">خویشاوندی</a><br/>
 	<a href="#color">رنگ ها</a><br/>
 	<a href="#number">اعداد شمارشی</a><br/>
 	<a href="#number-tarjib">اعداد ترتیبی</a><br/>
@@ -361,7 +361,7 @@ $(document).ready(function() {
 					<tr><td>الخریف</td><td>پاییز</td></tr>
 					<tr><td>الشتاء</td><td>زمستان</td></tr>
 
-					<tr id="relative" class="title"><td>خیشاوندی</td><td></td></tr>
+					<tr id="relative" class="title"><td>خویشاوندی</td><td></td></tr>
 					<tr><td>أب</td><td>پدر</td></tr>
 					<tr><td>أُمْ</td><td>مادر</td></tr>
 					<tr><td>أخ</td><td>برادر</td></tr>
