--- a/www/adab_ahkam.html
+++ b/www/adab_ahkam.html
@@ -34,7 +34,7 @@
 			FastClick.attach(document.body);
 			
 			if ( device.platform == 'Android' ){//Android,iOS,win7=WinCE,win8=Win32NT
-				document.addEventListener("backbutton", go_back, false);
+				document.addEventListener("backbutton", go_back_to_ghable_safar, false);
 			}
 		
 		}
@@ -127,7 +127,7 @@
 	</div>
 	<div id="warper" >
 			<div id="header">
-				<div id="back-btn" onclick="parent.history.back();"></div>
+				<div id="back-btn" onclick="go_back_to_ghable_safar();"></div>
 				<div id="header-text-2th">آداب و احکام</div>
 				<div class="center"></div>
 			</div>
