--- a/www/map_karbala.html
+++ b/www/map_karbala.html
@@ -916,8 +916,8 @@ L.marker([32.6104754,44.03110044], {icon: hotel_icon}).bindPopup('Zoyoof Rahman'
 //////////////////////////////////////////////////
 
 	var map = L.map('map', {
-		center: [32.1210,44.3257],
-		zoom: 12,
+		center: [32.6073,44.0115],
+		zoom: 13,
 		maxZoom: 16,//17
 		minZoom:1,
 	});
@@ -948,7 +948,7 @@ L.marker([32.6104754,44.03110044], {icon: hotel_icon}).bindPopup('Zoyoof Rahman'
 	
 	map.addControl( new L.Control.Search({
 		container: 'findbox',
-		layer: amud,
+		layer: ziyarati,
 		initial: false,
 		collapsed: false
 	}) );
