--- a/www/adabe-ziyarat.html
+++ b/www/adabe-ziyarat.html
@@ -130,8 +130,45 @@
 			<div id="container" >
 				<div id="main" >
 <div class="justify doa_text">
-زیارت آدابى دارد که عمل کردن به آن‌ها موجب مى شود زیارت  فضیلت بیشترى داشته باشد در اینجا به گزیده اى از آن‌ها اشاره مى شود:<br/>١. انگیزه‌ی الهى و خلوص نیّت در زیارت داشتن؛<br/><br/>٢. طهارت ظاهرى و باطنى (با توبه و استغفار از گناهان)؛<br/><br/>٣. با مال حلال به زیارت رفتن  ؛<br/><br/>٤. ترک کلام بیهوده و لغو؛<br/><br/>٥. غسل زیارت براى زیارت معصومین   ؛<br/><br/>٦. پوشیدن جامه پاک و پاکیزه و با لباس و جوراب‌هاى آلوده وارد حرم نشدن؛<br/><br/>٧. خوشبو نمودن خود؛<br/><br/>٨. با معرفت و شناخت، زیارت کردن.<br/><br/> بزنطى مى گوید: از امام رضا (علیه السلام) شنیدم که فرمودند:<br/>مازارَنى احَدٌ مِن اولیایى عارفاً بِحَقّى الّا تَشَفَّعْتُ فیه یوم القیامة  هیچ یک از اولیاء و پیروان من مرا زیارت نمى کند در حالى که به حق من معرفت دارد مگر اینکه در روز قیامت او را شفاعت مى کنم.<br/><br/>١. در هنگام رفتن به حرم مطهر ذکر و تسبیح گفتن؛<br/><br/>٢. با وضو به زیارت رفتن؛<br/><br/>٣. با زائران خوش رفتار بودن؛<br/><br/>٤. به هنگام دیدن قبر مطهر سلام دادن  (السلام علیکم یا اهل بیت النبوة) <br/><br/>٥. پیش از ورود به حرم مطهّر، اذن دخول طلبیدن- مرحوم شهید اول در کتاب دروس مى فرمایند: مناسب است زائر کنار درب حرم توقف نماید و اذن دخول بخواند اگر در خود خشوع و رقّت قلب احساس نمود وارد شود. مرحوم آیت‌الله مامقانى فرموده اند: نشانه اذن دخول آن است که زائر در قلب خود احساس رقّت و دل شکستگى کند؛<br/><br/>٦. با توجه و تفکر به عظمت صاحب قبر وارد حرم شدن ؛<br/><br/>٧. به هنگام ورود با پاى راست و به هنگام خروج با پاى چپ خارج شدن مانند ورود و خروج از مساجد؛<br/><br/>٨. ایستاده زیارت خواندن ؛<br/><br/>٩. در وقت زیارت صداى خود را بلند نکردن ؛<br/><br/>١٠. زیارت هاى مأثوره را خواندن؛<br/><br/>١١. در وقت زیارت پشت به قبله و رو به حضرت بودن ؛<br/><br/>١٢. به کنار ضریح رفتن و بوسیدن ضریح (به شرطى که ایجاد مزاحمت و آزار دیگران نباشد).  ؛<br/><br/>١٣. خواندن نماز زیارت ؛<br/><br/>١٤. تلاوت کردن قرآن در کنار ضریح و هدیه کردن آن به روح مقدس مُزَوَّر به‌ویژه سوره یس. ؛<br/><br/>١٥. در نظر گرفتن بستگان، دوستان در زیارت   و مناسب است بگوید اَلسَّلامُ عَلَیکَ یا مَولاىَ مِن «فُلانُ بنِ فُلان» و نام فرد مورد نظر را بگوید و سپس بگوید، اتَیْتُک زائِراً عِندَکَ فَاشفِعُ لَهُ عِندَ رَبّک و اگر بگوید اَلسَّلامُ عَلَیکَ یا وَلىَ الله مِن اَبى وَ اُمّى وَ زَوَّجتى وَ وَلَدى وَ جَمیعِ اَخوانى مِن اَلمؤمِنین کفایت مى کند.  ؛<br/><br/>١٦. رعایت کردن حال دیگران، تنه نزدن، فشار نیاوردن و ...؛<br/><br/>١٧. در اطراف و داخل حرم مطهر مراقب چشم و نگاه خود بودن؛<br/><br/>١٨. به نیابت از امام عصر زیارت کردن؛<br/><br/>١٩. در جمیع حالات زیارت، حضور قلب خود را حفظ نمودن   ؛<br/><br/>٢٠. در حین فراغ از زیارت از امام معصوم شفاعت خواستن  ؛<br/><br/>٢١. از خداوند توفیق مجدّد زیارت خواستن ؛<br/><br/>٢٢. با خادمان حرم با احترام برخورد کرده و به تذکرات آنان توجه نمودن ؛<br/><br/>٢٣. لازم است زائر در مدت اقامت در مشاهد مشرّفه با تمام قدرت در اصلاح خویش تلاش کند و تصمیم بگیرد پس از مراجعت هرگز مرتکب گناه نشود.<br/><br/> دعـاهـای سفـر<br/>١. خواندن سوره‌های حمد، توحید، قدر، ناس، فلق و آیة الکرسى<br/><br/>٢. خواندن این دعا: اللَّهُمَّ إِنِّی أَعُوذُ بِکَ مِنْ وَعْثَاءِ السَّفَرِ وَ کَآبَةِ الْمُنْقَلَبِ وَ سُوءِ الْمَنْظَرِ فِی الْأَهْلِ وَ الْمَالِ وَ الْوَلَدِ اللَّهُمَّ أَنْتَ الصَّاحِبُ فِی السَّفَرِ وَ أَنْتَ الْخَلِیفَةُ فِی الْأَهْلِ وَ لَا یَجْمَعُهُمَا غَیْرُکَ لِأَنَّ الْمُسْتَخْلَفَ لَا یَکُونُ مُسْتَصْحَباً وَ الْمُسْتَصْحَبُ لَا یَکُونُ مُسْتَخْلَفا (خداوندا، به تو پناه مى برم از سختى سفر، و غم و اندوه بازگشت، و از آنچه در اهل و مال و فرزندم زشت بینم. بارالها، یار سفرم، و جانشین در کنار زن و فرزندم تویى، و کسى جز تو قدرت بر این دو کار ندارد، زیرا براى جانشین توانایى همراهى با مسافر نیست، و همراه مسافر هم قدرت جانشینى ندارد.) <br/>نهج البلاغة (للصبحی صالح) ص٨٦<br/><br/>٣. خواندن این دعای کوتاه «اَللّهُمَ اَجعَل مَسیرى عِبَراً و صَمْتى  تَفکّراً و کلامى  ذکراً؛  خدایا! مسیرم را مایه عبرت، سکوتم را اندیشه و سخنم را یاد خود قرار ده».
-	<br/><br/><br/>
+<p style="text-align: justify;">زیارت آدابى دارد که عمل کردن به آن‌ها موجب مى شود زیارت فضیلت بیشترى داشته باشد در اینجا به گزیده اى از آن‌ها اشاره مى شود:</p>
+<p style="text-align: justify;">1. انگیزه‌ی الهى و خلوص نیّت در زیارت داشتن؛</p>
+<p style="text-align: justify;">2. طهارت ظاهرى و باطنى (با توبه و استغفار از گناهان)؛</p>
+<p style="text-align: justify;">3. با مال حلال به زیارت رفتن ؛</p>
+<p style="text-align: justify;">4. ترک کلام بیهوده و لغو؛</p>
+<p style="text-align: justify;">5. غسل زیارت براى زیارت معصومین ؛</p>
+<p style="text-align: justify;">6. پوشیدن جامه پاک و پاکیزه و با لباس و جوراب‌هاى آلوده وارد حرم نشدن؛</p>
+<p style="text-align: justify;">7. خوشبو نمودن خود؛</p>
+<p style="text-align: justify;">8. با معرفت و شناخت، زیارت کردن.</p>
+<p style="text-align: justify;">بزنطى مى گوید: از امام رضا (علیه السلام) شنیدم که فرمودند:</p>
+<p style="text-align: justify;">مازارَنى احَدٌ مِن اولیایى عارفاً بِحَقّى الّا تَشَفَّعْتُ فیه یوم القیامة هیچ یک از اولیاء و پیروان من مرا زیارت نمى کند در حالى که به حق من معرفت دارد مگر اینکه در روز قیامت او را شفاعت مى کنم.</p>
+<p style="text-align: justify;">9. در هنگام رفتن به حرم مطهر ذکر و تسبیح گفتن؛</p>
+<p style="text-align: justify;">10. با وضو به زیارت رفتن؛</p>
+<p style="text-align: justify;">11. با زائران خوش رفتار بودن؛</p>
+<p style="text-align: justify;">12. به هنگام دیدن قبر مطهر سلام دادن (السلام علیکم یا اهل بیت النبوة)</p>
+<p style="text-align: justify;">13. پیش از ورود به حرم مطهّر، اذن دخول طلبیدن- مرحوم شهید اول در کتاب دروس مى فرمایند: مناسب است زائر کنار درب حرم توقف نماید و اذن دخول بخواند اگر در خود خشوع و رقّت قلب احساس نمود وارد شود. مرحوم آیت‌الله مامقانى فرموده اند: نشانه اذن دخول آن است که زائر در قلب خود احساس رقّت و دل شکستگى کند؛</p>
+<p style="text-align: justify;">14. با توجه و تفکر به عظمت صاحب قبر وارد حرم شدن ؛</p>
+<p style="text-align: justify;">15. به هنگام ورود با پاى راست و به هنگام خروج با پاى چپ خارج شدن مانند ورود و خروج از مساجد؛</p>
+<p style="text-align: justify;">16. ایستاده زیارت خواندن ؛</p>
+<p style="text-align: justify;">17. در وقت زیارت صداى خود را بلند نکردن ؛</p>
+<p style="text-align: justify;">18. زیارت هاى مأثوره را خواندن؛</p>
+<p style="text-align: justify;">19. در وقت زیارت پشت به قبله و رو به حضرت بودن ؛</p>
+<p style="text-align: justify;">20. به کنار ضریح رفتن و بوسیدن ضریح (به شرطى که ایجاد مزاحمت و آزار دیگران نباشد). ؛</p>
+<p style="text-align: justify;">21. خواندن نماز زیارت ؛</p>
+<p style="text-align: justify;">22. تلاوت کردن قرآن در کنار ضریح و هدیه کردن آن به روح مقدس مُزَوَّر به‌ویژه سوره یس. ؛</p>
+<p style="text-align: justify;">23. در نظر گرفتن بستگان، دوستان در زیارت و مناسب است بگوید اَلسَّلامُ عَلَیکَ یا مَولاىَ مِن «فُلانُ بنِ فُلان» و نام فرد مورد نظر را بگوید و سپس بگوید، اتَیْتُک زائِراً عِندَکَ فَاشفِعُ لَهُ عِندَ رَبّک و اگر بگوید اَلسَّلامُ عَلَیکَ یا وَلىَ الله مِن اَبى وَ اُمّى وَ زَوَّجتى وَ وَلَدى وَ جَمیعِ اَخوانى مِن اَلمؤمِنین کفایت مى کند. ؛</p>
+<p style="text-align: justify;">24. رعایت کردن حال دیگران، تنه نزدن، فشار نیاوردن و ...؛</p>
+<p style="text-align: justify;">25. در اطراف و داخل حرم مطهر مراقب چشم و نگاه خود بودن؛</p>
+<p style="text-align: justify;">26. به نیابت از امام عصر زیارت کردن؛</p>
+<p style="text-align: justify;">27. در جمیع حالات زیارت، حضور قلب خود را حفظ نمودن ؛</p>
+<p style="text-align: justify;">28. در حین فراغ از زیارت از امام معصوم شفاعت خواستن ؛</p>
+<p style="text-align: justify;">29. از خداوند توفیق مجدّد زیارت خواستن ؛</p>
+<p style="text-align: justify;">30. با خادمان حرم با احترام برخورد کرده و به تذکرات آنان توجه نمودن ؛</p>
+<p style="text-align: justify;">31. لازم است زائر در مدت اقامت در مشاهد مشرّفه با تمام قدرت در اصلاح خویش تلاش کند و تصمیم بگیرد پس از مراجعت هرگز مرتکب گناه نشود.</p>
+<p style="text-align: justify;"><strong>دعـاهـای سفـر</strong></p>
+<p style="text-align: justify;">١. خواندن سوره‌های حمد، توحید، قدر، ناس، فلق و آیة الکرسى</p>
+<p style="text-align: justify;">٢. خواندن این دعا: اللَّهُمَّ إِنِّی أَعُوذُ بِکَ مِنْ وَعْثَاءِ السَّفَرِ وَ کَآبَةِ الْمُنْقَلَبِ وَ سُوءِ الْمَنْظَرِ فِی الْأَهْلِ وَ الْمَالِ وَ الْوَلَدِ اللَّهُمَّ أَنْتَ الصَّاحِبُ فِی السَّفَرِ وَ أَنْتَ الْخَلِیفَةُ فِی الْأَهْلِ وَ لَا یَجْمَعُهُمَا غَیْرُکَ لِأَنَّ الْمُسْتَخْلَفَ لَا یَکُونُ مُسْتَصْحَباً وَ الْمُسْتَصْحَبُ لَا یَکُونُ مُسْتَخْلَفا (خداوندا، به تو پناه مى برم از سختى سفر، و غم و اندوه بازگشت، و از آنچه در اهل و مال و فرزندم زشت بینم. بارالها، یار سفرم، و جانشین در کنار زن و فرزندم تویى، و کسى جز تو قدرت بر این دو کار ندارد، زیرا براى جانشین توانایى همراهى با مسافر نیست، و همراه مسافر هم قدرت جانشینى ندارد.) <br />نهج البلاغة (للصبحی صالح) ص٨٦</p>
+<p style="text-align: justify;">٣. خواندن این دعای کوتاه «اَللّهُمَ اَجعَل مَسیرى عِبَراً و صَمْتى تَفکّراً و کلامى ذکراً؛ خدایا! مسیرم را مایه عبرت، سکوتم را اندیشه و سخنم را یاد خود قرار ده». <br /><br /><br /></p>
+<br/><br/>
 <div>
 				</div>
 			</div>
