--- a/www/ahkame-ziyarate-niyabati.html
+++ b/www/ahkame-ziyarate-niyabati.html
@@ -130,7 +130,8 @@
 			<div id="container" >
 				<div id="main" >
 <div class="justify doa_text">
-س: آیا در حیات کسى مى توان به نیابت از او اعمال خیر مثل اهداء قرآن به مساجد و ... انجام داد؟<br/>ج: انجام اعمال خیر به نیت احیاء و اموات اشکال ندارد.<br/> <br/>مسأله: در صحت نیابت شرط است که نائب قصد نیابت نماید و لازم نیست نام آن شخص را بر زبان آورد.
+<p><strong>س: آیا در حیات کسى مى توان به نیابت از او اعمال خیر مثل اهداء قرآن به مساجد و ... انجام داد؟</strong></p>
+<p>ج: انجام اعمال خیر به نیت احیاء و اموات اشکال ندارد.<br /> <br />مسأله: در صحت نیابت شرط است که نائب قصد نیابت نماید و لازم نیست نام آن شخص را بر زبان آورد . </p><div>
 	<br/><br/><br/>
 <div>
 				</div>
