--- a/www/bikhavas.html
+++ b/www/bikhavas.html
@@ -139,14 +139,15 @@ ul.big_list {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='playAudio_new("audio/salame.mp3");' >زبیربن عوام</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >شریح قاضی</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >شبث بن ربعی</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >ابوموسی اشعری</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >عمربن سعد</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >سعدبن ابی وقاص</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >طلحه بن عبیدالله</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >سلیمان بن صرد خزاعی</li>
+							<li onclick='playAudio_new("audio/bikhavas/00.mp3");' >مقدمه</li>
+							<li onclick='playAudio_new("audio/bikhavas/01.mp3");' >زبیربن عوام</li>
+							<li onclick='playAudio_new("audio/bikhavas/02.mp3");' >شریح قاضی</li>
+							<li onclick='playAudio_new("audio/bikhavas/03.mp3");' >شبث بن ربعی</li>
+							<li onclick='playAudio_new("audio/bikhavas/04.mp3");' >ابوموسی اشعری</li>
+							<li onclick='playAudio_new("audio/bikhavas/05.mp3");' >عمربن سعد</li>
+							<li onclick='playAudio_new("audio/bikhavas/06.mp3");' >سعدبن ابی وقاص</li>
+							<li onclick='playAudio_new("audio/bikhavas/07.mp3");' >طلحه بن عبیدالله</li>
+							<li onclick='playAudio_new("audio/bikhavas/09.mp3");' >سلیمان بن صرد خزاعی</li>
 						</ul>
 
 					</div>
