--- a/www/bikhavas.html
+++ b/www/bikhavas.html
@@ -31,6 +31,8 @@
 		function onDeviceReady() {
 			init_audio();
 			
+			playAudio_new("audio/bikhavas/00.mp3");
+			
 			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
 			
@@ -147,7 +149,7 @@ ul.big_list {
 							<li onclick='playAudio_new("audio/bikhavas/05.mp3");' >عمربن سعد</li>
 							<li onclick='playAudio_new("audio/bikhavas/06.mp3");' >سعدبن ابی وقاص</li>
 							<li onclick='playAudio_new("audio/bikhavas/07.mp3");' >طلحه بن عبیدالله</li>
-							<li onclick='playAudio_new("audio/bikhavas/09.mp3");' >سلیمان بن صرد خزاعی</li>
+							<li onclick='playAudio_new("audio/bikhavas/08.mp3");' >سلیمان بن صرد خزاعی</li>
 						</ul>
 
 					</div>
