--- a/www/bikhavas.html
+++ b/www/bikhavas.html
@@ -31,7 +31,7 @@
 		function onDeviceReady() {
 			init_audio();
 			
-			playAudio_new("audio/bikhavas/00.mp3");
+			playAudio_new("audio/bikhavas/intro.mp3");
 			
 			//FastClick.attach(document.getElementById('container'));
 			FastClick.attach(document.body);
@@ -141,7 +141,7 @@ ul.big_list {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='playAudio_new("audio/bikhavas/00.mp3");' >مقدمه</li>
+							<li onclick='playAudio_new("audio/bikhavas/intro.mp3");' >مقدمه</li>
 							<li onclick='playAudio_new("audio/bikhavas/01.mp3");' >زبیربن عوام</li>
 							<li onclick='playAudio_new("audio/bikhavas/02.mp3");' >شریح قاضی</li>
 							<li onclick='playAudio_new("audio/bikhavas/03.mp3");' >شبث بن ربعی</li>
