--- a/www/besate_khun.html
+++ b/www/besate_khun.html
@@ -139,18 +139,18 @@ ul.big_list {
 				<div id="container">
 					<div id="main" class="">
 						<ul class="big_list">
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل بی وفایی</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل آزادگی</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل یتیمی</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل یاران</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل آخرین یاور</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل طعم عسل</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل عطش</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل پیامبر دوباره</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل علمدار</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل وداع</li>
-							<li onclick='playAudio_new("audio/salame.mp3");' >فصل عاشقی</li>
-							<li onclick='playAudio_new("audio/besmella.mp3");' >فصل انتقام</li>
+							<li onclick='playAudio_new("audio/besatkhune/01.mp3");' >فصل بی وفایی</li>
+							<li onclick='playAudio_new("audio/besatkhune/02.mp3");' >فصل آزادگی</li>
+							<li onclick='playAudio_new("audio/besatkhune/03.mp3");' >فصل یتیمی</li>
+							<li onclick='playAudio_new("audio/besatkhune/04.mp3");' >فصل یاران</li>
+							<li onclick='playAudio_new("audio/besatkhune/05.mp3");' >فصل آخرین یاور</li>
+							<li onclick='playAudio_new("audio/besatkhune/06.mp3");' >فصل طعم عسل</li>
+							<li onclick='playAudio_new("audio/besatkhune/07.mp3");' >فصل عطش</li>
+							<li onclick='playAudio_new("audio/besatkhune/08.mp3");' >فصل پیامبر دوباره</li>
+							<li onclick='playAudio_new("audio/besatkhune/09.mp3");' >فصل علمدار</li>
+							<li onclick='playAudio_new("audio/besatkhune/10.mp3");' >فصل وداع</li>
+							<li onclick='playAudio_new("audio/besatkhune/11.mp3");' >فصل عاشقی</li>
+							<li onclick='playAudio_new("audio/besatkhune/12.mp3");' >فصل انتقام</li>
 						</ul>
 
 					</div>
