--- a/www/en_ziyarat-ashura.html
+++ b/www/en_ziyarat-ashura.html
@@ -343,7 +343,7 @@ boldly gave currency to reign of terror and cruelty to oppress you and your frie
 	<div id="controls_bg"></div>
 </div>
 <script>
-	init_audio("audio/salame.mp3");
+	init_audio("audio/ziyarat/ziarat_ashura.mp3");
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
 	slider_Timer = $("#slider");
