--- a/www/ziyarat-arbaein.html
+++ b/www/ziyarat-arbaein.html
@@ -173,7 +173,7 @@
 	<div id="controls_bg"></div>
 </div>
 <script>
-	init_audio("audio/salame.mp3");
+	init_audio("audio/ziyarat/ziarat-arbayin.mp3");
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
 	slider_Timer = $("#slider");
