--- a/www/ziyarat-ashura.html
+++ b/www/ziyarat-ashura.html
@@ -193,7 +193,7 @@
 	<div id="controls_bg"></div>
 </div>
 <script>
-	init_audio("audio/salame.mp3");
+	init_audio("audio/ziyarat/ziarat_ashura.mp3");
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
 	slider_Timer = $("#slider");
