--- a/www/ziyarat-jamee.html
+++ b/www/ziyarat-jamee.html
@@ -202,7 +202,7 @@
 	<div id="controls_bg"></div>
 </div>
 <script>
-	init_audio("audio/salame.mp3");
+	init_audio("audio/ziyarat/jame_kabire.mp3");
 	audio_Timer = $("#audioTimer");
 	duration_Timer = $("#durationTimer");
 	slider_Timer = $("#slider");
